# ancore

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE_GATES_QUICK_REF.md  IMPLEMENTATION_SUMMARY.md  MAINTAINERS.md  README.md  SECURITY.md  checks.md  eslint.config.cjs  issue.md  package.json  pnpm-lock.yaml  pr.md  tsconfig.base.json  tsconfig.json
contracts/account/: Cargo.toml  README.md
contracts/account/src/: lib.rs
contracts/account/test_snapshots/test/: test_add_session_key.1.json  test_add_session_key_emits_event.1.json  test_double_initialize.1.json  test_execute_cross_contract_invocation.1.json  test_execute_emits_event.1.json  test_execute_event_nonce_is_pre_increment.1.json  test_execute_failed_no_event.1.json  test_execute_failed_no_nonce_increment.1.json  test_execute_non_owner_without_session_key_rejected.1.json  test_execute_rejects_duplicate_nonce.1.json  test_execute_rejects_expired_session_key.1.json  test_execute_rejects_invalid_nonce.1.json  test_execute_rejects_revoked_session_key.1.json  test_execute_rejects_session_key_at_exact_expiry_boundary.1.json  test_execute_rejects_session_key_with_wrong_permission.1.json  test_execute_session_key_expired.1.json  test_execute_session_key_increments_nonce_consecutively.1.json  test_execute_session_key_permissions.1.json  test_execute_validates_nonce_then_increments.1.json  test_execute_with_valid_session_key.1.json  test_get_owner_before_initialize_returns_not_initialized.1.json  test_get_version_defaults_to_zero_before_initialize_for_compatibility.1.json  (+9 more)
services/indexer/: Cargo.toml  README.md
services/indexer/migrations/: 001_create_account_activity_table.sql
services/indexer/src/: error.rs  lib.rs  main.rs
services/indexer/tests/: account_activity_api_test.rs
(+181 files in other folders)
