[package]
name = "ancore-account"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk.workspace = true

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
rand = "0.8.5"

[features]
testutils = ["soroban-sdk/testutils"]

# Profile settings inherited from workspace (contracts/Cargo.toml)
