[package]
name = "ancore-indexer"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.0"

[lib]
name = "ancore_indexer"
path = "src/lib.rs"

[[bin]]
name = "ancore-indexer"
path = "src/main.rs"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"

# Error handling
thiserror = "1"
anyhow = "1"

# Async trait support
async-trait = "0.1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

[dev-dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json", "macros"] }
tower = { version = "0.4", features = ["full"] }
http-body-util = "0.1"
hyper = { version = "1.0", features = ["full"] }
